--- a/split_def.ini
+++ b/split_def.ini
@@ -1,5 +1,5 @@
-INPUT_FILE_NAME = ./libraries/DEF/c1908.def
+INPUT_FILE_NAME = ./c17_example/c17_45nm_routing_layer4.def
 BACK_END = False
 FRONT_END = True
 SPLIT_LAYER = metal3
-OUTPUT_FILE_NAME = ./def_write/c1908_feol_metal4.def
+OUTPUT_FILE_NAME = ./c17_example/c17_split_metal3.def
