--- a/split_def.ini
+++ b/split_def.ini
@@ -1,5 +1,5 @@
-INPUT_FILE_NAME = ./c17_example/c17_45nm_routing_layer4.def
+INPUT_FILE_NAME = ./c432/c432_45nm_routing_layer5.def
 BACK_END = False
 FRONT_END = True
-SPLIT_LAYER = metal3
-OUTPUT_FILE_NAME = ./c17_example/c17_split_metal3_new.def
+SPLIT_LAYER = metal4
+OUTPUT_FILE_NAME = ./c432/c432_split_metal4.def
