util.py: commented out unused functions.

--- a/split_def.ini
+++ b/split_def.ini
@@ -1,5 +1,6 @@
-INPUT_FILE_NAME = ./c432/c432_45nm_routing_layer5.def
+LEF_FILE = ./satwik-02-10/NangateOpenCellLibrary.lef
+INPUT_FILE_NAME = ./satwik-02-10/c432_orig.def
 BACK_END = False
 FRONT_END = True
 SPLIT_LAYER = metal4
-OUTPUT_FILE_NAME = ./c432/c432_split_metal4.def
+OUTPUT_FILE_NAME = ./satwik-02-10/c432_satwik_splitted_metal4.def
